Updates on project structure. Added entities. Update for connected cell, including structure changes and dynamic info refresh(about the cell). Receiving neighbors cells information from opencellid (TODO add them to google maps).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WifiActivity" />
-        <activity android:name=".CellActivity"></activity>
+        <activity android:name=".wifi.WifiActivity" />
+        <activity android:name=".cell.CellActivity"></activity>
     </application>
 
 </manifest>
