--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '25.0.1'
     defaultConfig {
         applicationId "com.uoa.iokasti.networkmonitor"
         minSdkVersion 21
@@ -22,9 +22,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.1.0'
-//    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.google.maps.android:android-maps-utils:0.5'
+//    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.google.android.gms:play-services:10.2.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.google.code.gson:gson:2.7'
 }
